# 3DNSsolver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  output.xdmf  working.xdmf
apps/: 1d_euler.cpp  2d_euler.cpp  CMakeLists.txt  euler_solver.hpp  initial_condition.hpp
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
scripts/postProcess/: meshToVtu.py  reconstruct_datToVtu.py  subdomains_datToVtu.py  write_xdmf.py
scripts/random/: SL_initCond.py  eigenvector.py
src/: CMakeLists.txt  communicator.cpp  communicator.hpp  decomposition.cpp  decomposition.hpp  domain.cpp  domain.hpp  driver.cpp  driver.hpp  eq_of_state.cpp  eq_of_state.hpp  error_messages.hpp  grid.cpp  grid.hpp  main.cpp  matrix.cpp  matrix.hpp  params.cpp  params.hpp  testcases.cpp  testcases.hpp  time_scheme.cpp  time_scheme.hpp  timer.cpp  timer.hpp  viscosity.cpp  viscosity.hpp
src/boundary_conditions/: CMakeLists.txt  boundary.cpp  boundary.hpp  boundary_neumann.cpp  boundary_neumann.hpp
src/common/: allocator.hpp  cartesian_product.hpp  expression.hpp  extents.hpp  field.hpp  index_type.hpp  indices.hpp  loop.hpp  make_field.hpp  math.hpp  math_vector.hpp  math_vector_base.hpp  mdspan.hpp  runtime_assert.hpp  scalar.hpp  scalar_array.hpp  scalar_field.hpp  scalar_soa.hpp  subspan.hpp  utils.hpp  vector.hpp  vector_field.hpp
src/containers/: CMakeLists.txt  array_3d.cpp  array_3d.hpp  array_3d_dimensions.hpp  array_4d.cpp  array_4d.hpp  array_4d_dimensions.hpp
src/convection/: CMakeLists.txt  convection_flux.cpp  convection_flux.hpp  numerical_flux.cpp  numerical_flux.hpp  primitive_variables.cpp  primitive_variables.hpp
src/convection_schemes/: CMakeLists.txt  centered_convection.cpp  centered_convection.hpp  convection_constants.hpp  convection_flux.cpp  convection_flux.hpp  convection_scheme.cpp  convection_scheme.hpp  weno-5.cpp  weno-5.hpp  weno-5cw.cpp  weno-5cw.hpp
src/difference_operators/: CMakeLists.txt  cd-n.cpp  cd-n.hpp  cd_constants.hpp  difference_operator.hpp
src/differentiation/: axis_index.hpp  cd-n.hpp  downwind.hpp  evaluate_tiled.hpp  tiled_stencil.hpp  upwind.hpp  weno.hpp
src/diffusion_schemes/: CMakeLists.txt  centered_diffusion.cpp  centered_diffusion.hpp  diffusion_scheme.cpp  diffusion_scheme.hpp
src/equation/: CMakeLists.txt  boundary_condition.cpp  boundary_condition.hpp  boundary_mirror.hpp  cartesian_grid.hpp  coordinate_system.cpp  coordinate_system.hpp  equation.cpp  equation.hpp  equation_of_state.cpp  equation_of_state.hpp  euler.cpp  euler.hpp  euler_flux.hpp  euler_primitive_variables.cpp  euler_primitive_variables.hpp  flux.hpp  grid.cpp  grid.hpp  surface_field.cpp  surface_field.hpp  volumetric_field.hpp
src/fields/: allocator.hpp  cartesian_grid.hpp  coordinate_system.hpp  field.hpp  scalar_field.hpp  surface_field.hpp  vector_field.hpp  volumetric_field.hpp
src/io/: CMakeLists.txt  constants.hpp  hdf5_writer.cpp  hdf5_writer.hpp  io_binary.cpp  io_binary.hpp  make_dataset.cpp  make_dataset.hpp  make_datatype.cpp  make_datatype.hpp  make_file.cpp  make_file.hpp  output_info.cpp  output_info.hpp  reader.cpp  reader.hpp  simple_xdmf.hpp  tinyxml2.cpp  tinyxml2.hpp  write.cpp  write.hpp  write_xdmf.cpp  write_xdmf.hpp  writer.cpp  writer.hpp
src/jada/: cartesian_product.hpp  check_mpi.hpp  decomposition.hpp  evaluate_tiled.hpp  extents.hpp  indices.hpp  loop.hpp  mdspan.hpp  neighbours.hpp  rank.hpp  subspan.hpp  tiled_stencil.hpp  utils.hpp
src/jada/include/bits/: decomposition.hpp  evaluate_tiled.hpp  extents.hpp  loop.hpp  mdspan.hpp  rank.hpp  subspan.hpp  tiled_stencil.hpp  utils.hpp
src/jada/test/: test.hpp  test_jada.cpp
src/math/: math.hpp  math_vector.hpp  math_vector_base.hpp  scalar.hpp  vector.hpp
src/spatial_schemes/: cd-n.hpp  downwind.hpp  eno.hpp  upwind.hpp  weno.hpp
src/time_integration/: rk1.hpp  rk3.hpp
src/time_schemes/: rk3.hpp
test/: CMakeLists.txt  catch_main.cpp  catch_mpi_main.cpp  test_common.cpp  test_convection.cpp  test_differentiation.cpp  test_equation.cpp  test_euler.cpp  test_fields.cpp  test_helpers.hpp  test_io.cpp  test_jada.cpp  test_math.cpp
tutorials/shearLayer/: input.xml  results_to_paraview.sh  run.sh
